--- a/src/style/GamesModesSelector.scss
+++ b/src/style/GamesModesSelector.scss
@@ -1,6 +1,4 @@
-* {
-    font-family: Arial, Helvetica, sans-serif;
-}
+@import './index.scss';
 
 .game-modes-selector {
     display: inline-block;
