--- a/src/style/RankTitle.scss
+++ b/src/style/RankTitle.scss
@@ -1,3 +1,6 @@
+@import './index.scss';
+
+
 .rank-title {
     background-color: #2B2C3E;
     color: #FEFEFE;
@@ -9,7 +12,6 @@
     padding-left: 0.75rem;
     padding-right: 0.75rem;
 
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 0.75rem;
     
     height: 1.5rem;
